--- a/template.html
+++ b/template.html
@@ -4,15 +4,15 @@
 <head>
   <meta charset="UTF-8">
 
-  <!-- Titolo del tab della pagina nel browser -->
+  <!-- titolo del tab della pagina nel browser -->
   <title></title>
 
-  <!-- Link con il file CSS di formattazione -->
+  <!-- link con il file CSS di formattazione -->
   <link href="style.css" rel="stylesheet" />
 </head>
 
 
-<!-- Contenuto -->
+<!-- contenuto della pagina -->
 <body>
 </body>
 
