--- a/login/index.html
+++ b/login/index.html
@@ -4,16 +4,54 @@
 <head>
   <meta charset="UTF-8">
 
-  <!-- Titolo del tab della pagina nel browser -->
-  <title></title>
+  <!-- titolo del tab della pagina nel browser -->
+  <title>Login</title>
 
-  <!-- Link con il file CSS di formattazione -->
+  <!-- link con il file CSS di formattazione -->
   <link href="style.css" rel="stylesheet" />
 </head>
 
 
-<!-- Contenuto -->
+<!-- contenuto della pagina -->
 <body>
+  <div id="contenuto">
+    <img src="images/login.webp" height="300">
+
+    <div id="login-form">
+      <!-- titolo principale della pagina -->
+      <h1>Login</h1>
+
+      <form>
+        <!-- titolo del campo di input -->
+        <!-- l'attributo 'for' ha come valore l'id dell'input a cui <label> fa da titolo -->
+        <label for="username">Username *</label>
+        <!-- campo di inserimento dell'username -->
+        <!-- l'attributo 'type' indica che tipo di input è -->
+        <!-- l'attributo 'name' serve a tenere traccia del valore inserito, una volta inviato il form (di solito uguale all'attributo 'id') -->
+        <!-- l'attributo 'placeholder' inserisce un suggerimento nel campo di testo -->
+        <input type="text"
+          id="username" name="username"
+          placeholder="Enter your Username">
+
+        <label for="password">Password *</label>
+        <input type="text"
+          id="password" name="password"
+          placeholder="Enter your Password">
+
+        <label for="remember-me">Remember me</label>
+        <input type="checkbox" id="remember-me" name="remember-me">
+
+        <!-- il tipo 'submit' è un bottone, che serve a inviare i dati -->
+        <input type="submit" value="LOGIN">
+
+      </form>
+
+      <!-- link di aiuto (href è vuoto perché non c'è la pagina a cui rimanda il link) -->
+      <a href="">Forgot password?</a>
+      <a href="">Don't have an account?</a>
+
+    </div>
+  </div>
 </body>
 
 </html>
